@@ -6,6 +6,8 @@
 __docformat__ = 'restructuredtext'
 __version__ = '$Id: $'
 
+import sys
+
 # enum SDLKey {
 
 #  The keyboard syms have been cleverly chosen to map to ASCII 
@@ -313,17 +315,6 @@ SDL_INIT_EVERYTHING = 0x0000ffff
 #Constants from SDL_mutex.h:
 SDL_MUTEX_TIMEDOUT = 0x00000001
 
-#Constants from SDL_ttf.h:
-SDL_TTF_MAJOR_VERSION = 0x00000002
-SDL_TTF_MINOR_VERSION = 0x00000000
-SDL_TTF_PATCHLEVEL = 0x00000007
-UNICODE_BOM_NATIVE = 0x0000feff
-UNICODE_BOM_SWAPPED = 0x0000fffe
-TTF_STYLE_NORMAL = 0x00000000
-TTF_STYLE_BOLD = 0x00000001
-TTF_STYLE_ITALIC = 0x00000002
-TTF_STYLE_UNDERLINE = 0x00000004
-
 #Constants from SDL_video.h:
 SDL_ALPHA_OPAQUE = 0x000000ff
 SDL_ALPHA_TRANSPARENT = 0x00000000
@@ -390,9 +381,6 @@ SDL_APPMOUSEFOCUS = 0x00000001
 SDL_APPINPUTFOCUS = 0x00000002
 SDL_APPACTIVE = 0x00000004
 
-#Constants from SDL_opengl.h:
-WIN32_LEAN_AND_MEAN = 0x00000001
-
 #Constants from SDL_joystick.h:
 SDL_HAT_CENTERED = 0x00000000
 SDL_HAT_UP = 0x00000001
@@ -410,20 +398,6 @@ RW_SEEK_SET = 0x00000000
 RW_SEEK_CUR = 0x00000001
 RW_SEEK_END = 0x00000002
 
-#Constants from SDL_sound.h:
-SOUND_VER_MAJOR = 0x00000001
-SOUND_VER_MINOR = 0x00000000
-SOUND_VER_PATCH = 0x00000001
-
-#Constants from SDL_mixer.h:
-SDL_MIXER_MAJOR_VERSION = 0x00000001
-SDL_MIXER_MINOR_VERSION = 0x00000002
-SDL_MIXER_PATCHLEVEL = 0x00000006
-MIX_CHANNELS = 0x00000008
-MIX_DEFAULT_FREQUENCY = 0x00005622
-MIX_DEFAULT_CHANNELS = 0x00000002
-MIX_MAX_VOLUME = 0x00000080
-
 #Constants from SDL_timer.h:
 SDL_TIMESLICE = 0x0000000a
 TIMER_RESOLUTION = 0x0000000a
@@ -438,10 +412,12 @@ TTF_STYLE_UNDERLINE = 0x04
 # From SDL_mixer.h (inserted manually)
 MIX_CHANNELS            = 8
 MIX_DEFAULT_FREQUENCY   = 22050
-MIX_DEFAULT_FORMAT      = AUDIO_S16LSB  # TODO endianness
-MID_DEFAULT_CHANNELS    = 2
 MIX_MAX_VOLUME          = 128
 MIX_CHANNEL_POST        = -2
 MIX_EFFECTSMAXSPEED     = 'MIX_EFFECTSMAXSPEED'
+MIX_DEFAULT_CHANNELS    = 2
 
-
+if sys.byteorder == 'little':
+    MIX_DEFAULT_FORMAT  = AUDIO_S16LSB 
+else:
+    MIX_DEFAULT_FORMAT  = AUDIO_S16MSB
